# internal/api/handlers/handlers.go
@@ -7,6 +7,7 @@ import (
 	"allaboutapps.dev/aw/go-starter/internal/api/handlers/common"
 	"allaboutapps.dev/aw/go-starter/internal/api/handlers/push"
 	"allaboutapps.dev/aw/go-starter/internal/api/handlers/sse"
+	"allaboutapps.dev/aw/go-starter/internal/api/handlers/wss"
 	"github.com/labstack/echo/v4"
 )
 
@@ -27,7 +28,8 @@ func AttachAllRoutes(s *api.Server) {
 		common.GetVersionRoute(s),
 		push.GetPushTestRoute(s),
 		push.PostUpdatePushTokenRoute(s),
-		sse.GetSEEStreamRoute(s),
+		sse.GetSSEStreamRoute(s),
 		sse.GetSSETriggerRoute(s),
+		wss.GetWSSStreamRoute(s),
 	}
 }
