# internal/api/handlers/sse/get_sse_stream.go
@@ -1,48 +1,78 @@
 package sse
 
 import (
+	"bytes"
 	"encoding/json"
+	"fmt"
 	"log"
 	"net/http"
 
 	"allaboutapps.dev/aw/go-starter/internal/api"
+	"allaboutapps.dev/aw/go-starter/internal/types/sse"
+	"allaboutapps.dev/aw/go-starter/internal/util"
 	"github.com/labstack/echo/v4"
 )
 
-func GetSEEStreamRoute(s *api.Server) *echo.Route {
-	return s.Router.APIV1SSE.GET("/stream", getSEEStreamHandler(s))
+func GetSSEStreamRoute(s *api.Server) *echo.Route {
+	return s.Router.APIV1SSE.GET("/stream", getSSEStreamHandler(s))
 }
 
-func getSEEStreamHandler(s *api.Server) echo.HandlerFunc {
+func getSSEStreamHandler(s *api.Server) echo.HandlerFunc {
 	return func(c echo.Context) error {
 		ctx := c.Request().Context()
+		params := sse.NewGetSSEStreamRouteParams()
+		if err := util.BindAndValidateQueryParams(c, &params); err != nil {
+			return err
+		}
+		// c.Response().Header().Set(echo.HeaderContentType, echo.MIMEApplicationJSON)
+		c.Response().Header().Set("Access-Control-Allow-Origin", "*")
+		c.Response().Header().Set("Access-Control-Allow-Headers", "Content-Type")
+		c.Response().Header().Set("Content-Type", "text/event-stream")
+		c.Response().Header().Set("Cache-Control", "no-cache")
+		c.Response().Header().Set("Connection", "keep-alive")
 
-		c.Response().Header().Set(echo.HeaderContentType, echo.MIMEApplicationJSON)
 		c.Response().WriteHeader(http.StatusOK)
-
-		subscriber := s.Redis.Subscribe(ctx, "test")
-
-		enc := json.NewEncoder(c.Response())
-
-		msg, err := subscriber.ReceiveMessage(ctx)
-
+		if len(params.ChannelList) == 0 {
+			fmt.Println("No channels provided")
+			return c.NoContent(http.StatusNoContent)
+		}
+		subscriber := s.Redis.Subscribe(ctx, params.ChannelList...)
 		for {
-			select {
-			case <-ctx.Done():
-				return nil
-			default:
-				if err != nil {
-					return err
-				}
-
-				log.Printf("new msg: %+v\n", msg.Payload)
-				if err := enc.Encode(msg); err != nil {
-					return err
-				}
-				c.Response().Flush()
+			msg, err := subscriber.ReceiveMessage(ctx)
+			if err != nil {
+				return err
 			}
 
+			fmt.Println("Received message from " + msg.Channel + " channel.")
+			fmt.Printf("%+v\n", msg.Payload)
+
+			// timeout := time.After(1 * time.Second)
+			select {
+			case <-ctx.Done():
+				log.Println("Context canceled")
+				return nil
+			// case <-timeout:
+			// 	if _, err := fmt.Fprintf(c.Response().Writer, ": nothing to sent\n\n"); err != nil {
+			// 		return err
+			// 	}
+			default:
+				var buf bytes.Buffer
+				enc := json.NewEncoder(&buf)
+				if err := enc.Encode(msg.Channel); err != nil {
+					return err
+				}
+
+				if _, err := fmt.Fprintf(c.Response().Writer, "data: %v\n\n", buf.String()); err != nil {
+					return err
+				}
+				fmt.Printf("data: %v\n", buf.String())
+				// if _, err := c.Response().Write(buf.Bytes()); err != nil {
+				// 	return err
+				// }
+				c.Response().Flush()
+			}
 		}
 
 	}
+
 }
