# internal/types/get_s_e_e_stream_response.go
@@ -1,28 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package types
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"context"
-
-	"github.com/go-openapi/strfmt"
-)
-
-// GetSEEStreamResponse get s e e stream response
-// Example: hello world
-//
-// swagger:model getSEEStreamResponse
-type GetSEEStreamResponse string
-
-// Validate validates this get s e e stream response
-func (m GetSEEStreamResponse) Validate(formats strfmt.Registry) error {
-	return nil
-}
-
-// ContextValidate validates this get s e e stream response based on context it is used
-func (m GetSEEStreamResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	return nil
-}
