# internal/types/wss/get_w_s_s_stream_route_parameters.go
@@ -1,6 +1,6 @@
 // Code generated by go-swagger; DO NOT EDIT.
 
-package sse
+package wss
 
 // This file was generated by the swagger tool.
 // Editing this file might prove futile when you re-run the swagger generate command
@@ -13,18 +13,18 @@ import (
 	"github.com/go-openapi/strfmt"
 )
 
-// NewGetSEEStreamRouteParams creates a new GetSEEStreamRouteParams object
+// NewGetWSSStreamRouteParams creates a new GetWSSStreamRouteParams object
 // no default values defined in spec.
-func NewGetSEEStreamRouteParams() GetSEEStreamRouteParams {
+func NewGetWSSStreamRouteParams() GetWSSStreamRouteParams {
 
-	return GetSEEStreamRouteParams{}
+	return GetWSSStreamRouteParams{}
 }
 
-// GetSEEStreamRouteParams contains all the bound params for the get s e e stream route operation
+// GetWSSStreamRouteParams contains all the bound params for the get w s s stream route operation
 // typically these are obtained from a http.Request
 //
-// swagger:parameters GetSEEStreamRoute
-type GetSEEStreamRouteParams struct {
+// swagger:parameters GetWSSStreamRoute
+type GetWSSStreamRouteParams struct {
 
 	// HTTP Request Object
 	HTTPRequest *http.Request `json:"-"`
@@ -33,8 +33,8 @@ type GetSEEStreamRouteParams struct {
 // BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
 // for simple values it will use straight method calls.
 //
-// To ensure default values, the struct must have been initialized with NewGetSEEStreamRouteParams() beforehand.
-func (o *GetSEEStreamRouteParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+// To ensure default values, the struct must have been initialized with NewGetWSSStreamRouteParams() beforehand.
+func (o *GetWSSStreamRouteParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
 	var res []error
 
 	o.HTTPRequest = r
@@ -45,7 +45,7 @@ func (o *GetSEEStreamRouteParams) BindRequest(r *http.Request, route *middleware
 	return nil
 }
 
-func (o *GetSEEStreamRouteParams) Validate(formats strfmt.Registry) error {
+func (o *GetWSSStreamRouteParams) Validate(formats strfmt.Registry) error {
 	var res []error
 
 	if len(res) > 0 {
